# gdyndns

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  gdyndns.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publish_container.yml
