[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
  \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
# The following are specific to Black, you probably don't want those.
| blib2to3
| tests/data
)/
'''

[tool.poetry]
name = "gdyndns"
version = "1.0.0"
description = "Google Dynamic DNS Updater"
authors = ["Josh VanDeraa <josh@josh-v.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^24.3"
bandit = "^1.7.0"
pylint = "^2.9.6"
yamllint = "^1.26.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
